ocp/app_deployment/frontend/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: car-quote-app-frontend
  labels:
    app: car-quote-app
    component: frontend
spec:
  to:
    kind: Service
    name: car-quote-app-frontend
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
